--- a/projects/reply/src/styles/index.scss
+++ b/projects/reply/src/styles/index.scss
@@ -7,6 +7,11 @@
 @include mat.core(theming.$typography-config);
 @include mat.all-component-themes(theming.$theme);
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
   overscroll-behavior: none;
